[package]
name = "simsort"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.4.0"
crc32fast = "1.4.2"
rand = "0.8.5"
log = "0.4.21"
env_logger = "0.11.3"
clap = { version = "4.5.7", features = ["derive"] }
exitcode = "1.1.2"
tempfile = "3.11.0"
bit-set = "0.8.0"
pathdiff = "0.2.3"
num-traits = "0.2.14"

[dev-dependencies]
proptest = "^1.6.0"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "analyze"
path = "src/bin/analyze.rs"

[[bin]]
name = "simsort"
path = "src/main.rs"

[lib]
name = "simsort"
path = "src/lib.rs"

[profile.bench]
debug = "line-directives-only"
